--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FoodMe",
+  "name": "zx API client",
   "version": "0.0.1",
   "description": "Super awesome tutorial.",
   "keywords": [],
