--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "express": ">= 3.0.0",
     "csv": ">= 0.2.1",
     "open": ">= 0.0.2",
-    "testacular": "canary"
+    "testacular": "canary",
+    "soap": ">=0.2.7" ,
+    "hat": ">=0.0.3",
+    "logly": ">=0.3.11"
   },
   "engines": {
     "node": ">= 0.8.4"
